# Azgard

./: .gitignore  CMakeLists.txt  README  README.md  TODO
Engine/Assets/xml/: teste.xml
Engine/Core/: Api.hpp  Assert.cpp  Assert.hpp  Azgard.hpp  ConcurrentQueue.hpp  ConcurrentRingBuffer.hpp  ConcurrentVector.hpp  Engine.hpp  Math.cpp  Math.hpp  Move.hpp  Singleton.hpp  SpinLock.hpp  TypeTraits.hpp  Window.hpp
Engine/Debug/: Debugger.cpp  Debugger.hpp  Logger.cpp  Logger.hpp
Engine/Event/: EventManager.cpp  EventManager.hpp
Engine/File/: FileHandle.cpp  FileHandle.hpp  FileManager.cpp  FileManager.hpp
Engine/Format/: Json.cpp  Json.hpp  Xml.cpp  Xml.hpp
Engine/Input/: KeyCode.hpp  KeyScanCode.hpp
Engine/Job/: Fiber.cpp  Fiber.hpp  FiberPoolFixed.hpp  Invoker.hpp  Job.cpp  Job.hpp  JobManager.cpp  JobManager.hpp  JobPriorityQueue.hpp  JobQueues.cpp  JobQueues.hpp  Jobin.hpp  Promise.hpp  PromiseResolver.hpp  WaitingJob.hpp  Worker.cpp  Worker.hpp
Engine/Memory/: Memory.cpp  Memory.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryPool.cpp  MemoryPool.hpp
Engine/Platform/: Config.hpp  PlatformManager.cpp  PlatformManager.hpp
Engine/Platform/Android/: Android.hpp
Engine/Platform/Browser/: Browser.hpp
Engine/Platform/Iphone/: Iphone.hpp
Engine/Platform/Linux/: Linux.hpp
Engine/Platform/MacOSX/: MacOSX.hpp
Engine/Platform/Unix/: Unix.hpp
Engine/Platform/Windows/: Windows.hpp
Engine/Renderer/Shader/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp  Lexex.cpp  Parser.cpp  Parser.hpp  Scope.cpp  Scope.hpp  Visitor.cpp  Visitor.hpp
Engine/Runtime/: Engine.cpp  Engine.hpp  TimeManager.cpp  TimeManager.hpp
Sandbox/: CMakeLists.txt  main.cpp
cmake/: set_target_option.cmake
